# envoy-wasm

./: .bazelignore  .bazelrc  .gitignore  CODEOWNERS  WASM.md  WORKSPACE  envoy.yaml  ing Extensions::Common::Wasm::Context::log
.azure-pipelines/: linux.yml  pipelines.yml
.circleci/: config.yml
api/: BUILD
api/bazel/: repository_locations.bzl
api/docs/: BUILD
api/versioning/: BUILD
api/wasm/rust/: Cargo.toml  Makefile.base  README.md
api/wasm/rust/src/: context.rs  enum.rs  envoy_log.rs  host.rs  lib.rs  payload.rs  payload_wrapper.rs  types.rs
bazel/: BUILD  README.md  antlr.patch  bazel_repository.bzl  dependency_imports.bzl  envoy_build_system.bzl  envoy_library.bzl  envoy_select.bzl  genrule_repository.bzl  protobuf.patch  protobuf_emscripten.patch  repositories.bzl  repository_locations.bzl  target_recipes.bzl  wasm_repositories.bzl
bazel/foreign_cc/: BUILD  wee8.patch
bazel/wasm/: wasm.bzl
ci/: README.md  build_setup.sh  do_ci.sh  do_circle_ci.sh  mac_ci_steps.sh  run_clang_tidy.sh  run_envoy_docker.sh  verify_examples.sh  windows_ci_steps.sh
ci/build_container/: build_container_centos.sh  build_container_common.sh  build_container_ubuntu.sh
ci/prebuilt/: BUILD
docs/: build.sh
examples/: BUILD
examples/wasm/: BUILD  Dockerfile-proxy  Makefile  Makefile.docker_cpp_builder  README.md  docker-compose.yaml  envoy.yaml  (+11 more)
examples/wasm/rust-wasm-filter/: Cargo.toml
examples/wasm/rust-wasm-filter/src/: lib.rs
generated_api_shadow/: BUILD
test/: run_envoy_bazel_coverage.sh
test/extensions/filters/http/wasm/test_data/async_call_rust/: Cargo.toml
test/extensions/filters/http/wasm/test_data/async_call_rust/src/: lib.rs
test/extensions/filters/http/wasm/test_data/headers_rust/: Cargo.toml
test/extensions/filters/http/wasm/test_data/headers_rust/src/: lib.rs
test/extensions/filters/http/wasm/test_data/shared_queue_rust/: Cargo.toml
test/extensions/wasm/test_data/: BUILD  Cargo.toml  Makefile  Makefile.docker_cpp_builder  asm2wasm.wat  asm2wasm_cpp.cc  asm2wasm_cpp.wasm  asm2wasm_cpp.wat  bad_signature.cc  bad_signature.wasm  bad_signature.wat  bad_signature_cpp.cc  bad_signature_cpp.wasm  bad_signature_cpp.wat  docker_build_cpp_wasm.sh  emscript.wasm  emscripten_cpp.cc  emscripten_cpp.wasm  emscripten_cpp.wat  envoy_wasm_intrinsics.js  logging.cc  logging.wasm  logging.wat  logging_cpp.cc  logging_cpp.wasm  logging_cpp.wat  logging_rust.wasm  logging_rust.wat  memory.wast  missing_cpp.cc  missing_cpp.wasm  missing_cpp.wat  segv.cc  segv.wasm  segv.wat  segv_cpp.cc  segv_cpp.wasm  segv_cpp.wat  speed_cpp.cc  speed_cpp.wasm  (+7 more)
test/extensions/wasm/test_data/logging_rust/: Cargo.toml
test/extensions/wasm/test_data/logging_rust/src/: lib.rs
test/extensions/wasm/test_data/src/: headers_rust.rs
toolchain/: BUILD  cc_toolchain_config.bzl  emcc.sh
tools/: bazel.rc  cargo-raze.sh  check_format.py  check_repositories.sh  proto_sync.py  spelling_dictionary.txt  spelling_skip_files.txt
(+454 files in other folders)
