[package]
description = "Proxy-WASM for Rust"
name = "proxy_wasm"
version = "0.0.1"
authors = ["Piotr Sikora <piotrsikora@google.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
