[package]
description = "Proxy-WASM for Rust"
name = "proxy_wasm"
version = "0.0.1"
authors = ["Piotr Sikora <piotrsikora@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
lazy_static = "1.4.0"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[lib]
crate-type = ["cdylib"]
