[package]
name = "rust-wasm-filter"
version = "0.1.0"
authors = ["Rei Shimizu <rei@tetrate.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy_wasm = { path = "../../../api/wasm/rust" }
log = "0.4"
lazy_static = "1.4.0"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[lib]
crate-type = ["cdylib"]