[package]
name = "test_data"
version = "0.1.0"
authors = ["Rei Shimizu <Shikugawa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy-wasm = "0.1"
log = "0.4"

[lib]
path = "src/*.rs"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[raze]
workspace_path = "//bazel/external/cargo"
genmode = "Remote"

[raze.crates.log.'0.4.11']
additional_flags = ["--cfg=atomic_cas"]
